feat: added html structure (12/09/2023)

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -7,6 +7,55 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="all">
+        <input checked type="radio" name="respond" id="desktop">
+        <article id="slider">
+            
+            <input checked type="radio" name="slider" id="switch1">
+            <input type="radio" name="slider" id="switch2">
+            <input type="radio" name="slider" id="switch3">
+            <input type="radio" name="slider" id="switch4">
+            <input type="radio" name="slider" id="switch5">
+
+            <div id="slides">
+                <div id="slides-wrapper">
+                    <div class="slider-image">
+                        <article>
+                            <img src="memsPhoto/mem1.jpg" alt="mem1">
+                        </article>
+                        <article>
+                            <img src="memsPhoto/mem2.jpg" alt="mem1">
+                        </article>
+                        <article>
+                            <img src="memsPhoto/mem3.jpg" alt="mem1">
+                        </article>
+                        <article>
+                            <img src="memsPhoto/mem4.jpg" alt="mem1">
+                        </article>
+                        <article>
+                            <img src="memsPhoto/mem5.jpg" alt="mem1">
+                        </article>
+                    </div>
+                </div>
+            </div>
+
+            <div id="controls">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+
+            <div id="active">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+
+        </article>
+    </div>
 </body>
 </html>
