feat: added dot for switch slider

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -9,29 +9,24 @@
 <body>
 <div class="slider">
     <div class="slider-wrapper">
-        <div class="slider-item slide1" >
-            <!-- <img src="memsPhoto/mem1.jpg" alt=""> -->
+        <div class="slider-item slide1" id="s1" >
         </div>
-        <div class="slider-item slide2" >
-            <!-- <img src="memsPhoto/mem2.jpg" alt=""> -->
+        <div class="slider-item slide2" id="s2" >
         </div>
-        <div class="slider-item slide3" >
-            <!-- <img src="memsPhoto/mem3.jpg" alt=""> -->
+        <div class="slider-item slide3" id="s3">
         </div>
-        <div class="slider-item slide4" >
-            <!-- <img src="memsPhoto/mem4.jpg" alt=""> -->
+        <div class="slider-item slide4" id="s4">
         </div>
-        <div class="slider-item slide5" >
-            <!-- <img src="memsPhoto/mem5.jpg" alt=""> -->
+        <div class="slider-item slide5" id="s5">
         </div>
     </div>
     <div class="slider-control">
         <div class="slider-pagination">
-            <input type="radio" name="slide" id="s1">
-            <input type="radio" name="slide" id="s2">
-            <input type="radio" name="slide" id="s3">
-            <input type="radio" name="slide" id="s4">
-            <input type="radio" name="slide" id="s5">
+            <a href="#s1" class="slider-dot"> </a>
+            <a href="#s2" class="slider-dot"> </a>
+            <a href="#s3" class="slider-dot"> </a>
+            <a href="#s4" class="slider-dot"> </a>
+            <a href="#s5" class="slider-dot"> </a>
         </div>
         <div class="slider-labels">
             <label for="s1">Slide 1</label>
