feat: added switch slide 17/09/23

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -8,33 +8,35 @@
 </head>
 <body>
 <div class="slider">
+
+    <div class="slider-pagination">
+        <input type="radio" id="s1" class="slider-dot" name="slides" checked>
+        <input type="radio" id="s2" class="slider-dot" name="slides">
+        <input type="radio" id="s3" class="slider-dot" name="slides">
+        <input type="radio" id="s4" class="slider-dot" name="slides">
+        <input type="radio" id="s5" class="slider-dot" name="slides">
+        <label class='text1' for="s1">One years in It & five years in It</label>
+        <label class='text2' for="s2">Finish it-courses to understand It memes</label>
+        <label class='text3' for="s3">it works don't touch it</label>
+        <label class='text4' for="s4">Just do it </label>
+        <label class='text5' for="s5">let me in</label>
+    </div>
+
     <div class="slider-wrapper">
-        <div class="slider-item slide1" id="s1" >
+        <div class="slider-item slide1">
         </div>
-        <div class="slider-item slide2" id="s2" >
+        <div class="slider-item slide2">
         </div>
-        <div class="slider-item slide3" id="s3">
+        <div class="slider-item slide3">
         </div>
-        <div class="slider-item slide4" id="s4">
+        <div class="slider-item slide4">
         </div>
-        <div class="slider-item slide5" id="s5">
+        <div class="slider-item slide5">
         </div>
     </div>
-    <div class="slider-control">
-        <div class="slider-pagination">
-            <a href="#s1" class="slider-dot"> </a>
-            <a href="#s2" class="slider-dot"> </a>
-            <a href="#s3" class="slider-dot"> </a>
-            <a href="#s4" class="slider-dot"> </a>
-            <a href="#s5" class="slider-dot"> </a>
-        </div>
-        <div class="slider-labels">
-            <label for="s1">Slide 1</label>
-            <label for="s2">Slide 2</label>
-            <label for="s3">Slide 3</label>
-            <label for="s4">Slide 4</label>
-            <label for="s5">Slide 5</label>
-        </div>
+
+    <div class="slider-labels">
+        
     </div>
 </div>
 
